--- a/index.html
+++ b/index.html
@@ -63,10 +63,13 @@
                       </li>
                       <li><a href="index.html#events">Events</a>
                       </li>
+                      <li><a href="index.html#teachers">Our Teachers</a>
+                      </li>
                       <li><a href="gallery.html">Gallery</a>
                       </li>
                       <li><a href="careers.html">Careers</a>
                       </li>
+                      
                       <li><a href="parents-pioneer.html">Parents Pioneer</a>
                       </li>
                       <li><a href="index.html#contactus">Contact Us</a>
@@ -198,7 +201,7 @@
             <div class="col-md-5">
               <h2 class="home-headings-custom font-weight-bold view-animate fadeInLeftSm delay-06">About Alphabets</h2>
               <div class="offset-top-35 offset-lg-top-60 view-animate fadeInLeftSm delay-08">
-                <p>The early stage of education is very important for our children where Alphabets take the utmost care for education, inspiration and enrichment of them. We provide them a very safe, caring and great environment and space where they develop the love towards learning and education. On top of everything, Our authentic Montessori approach will not only provide the knowledge, But also the capablity for them to develop the internal qualities to become a better individual in our community.</p>
+                <p>The early stage of education is very important for our children where Alphabets take the utmost care for education, inspiration and enrichment of them. We provide them a very safe, caring and great environment and space where they develop the love towards learning and education. On top of everything, our authentic Montessori approach will not only provide the knowledge, but also give them the capablity to develop the internal qualities to become a better individual in our community.</p>
               </div>
               <div class="offset-top-30 view-animate fadeInLeftSm delay-1"><a class="btn btn-ellipse btn-icon btn-icon-right btn-default" href="#programs"><span class="icon fa-arrow-right"></span><span>Learn More abour our Programs</span></a></div>
             </div>
@@ -213,7 +216,7 @@
                 <div class="bg-cover section-image-aside-img d-none d-md-block view-animate zoomInSmall delay-04" style="background-image: url(https://res.cloudinary.com/abhinithame/image/upload/v1577901849/alphabets/whychooseus.jpg)"></div>
                 <div class="section-image-aside-body section-70 section-lg-114 inset-lg-right-70 inset-xl-right-110">
                   <h2 class="home-headings-custom font-weight-bold view-animate fadeInLeftSm delay-04">Why Choose Us?</h2>
-                  <div class="offset-top-35 offset-lg-top-60 view-animate fadeInLeftSm delay-06">At Alphabets, we see our aim in providing care and an prepared learning environment which is tailored to each individual child’s needs, in safe, secure, happy and relaxed surroundings. We follow a hollistic approach os Association of Montessori Internationale principles. We are new to our community and we are growing. There are no compromise with Alphabets when it comes to the learning environment for our children. We are proud to say that bring the best in class infrastructure and environment which our kids will love. We are committed to your children’s success. More the the environment of the school, we provide only Organic and Non GMO food for the children. We are a Nut Free environment as well. </div>
+                  <div class="offset-top-35 offset-lg-top-60 view-animate fadeInLeftSm delay-06">At Alphabets, we see our aim in providing care and a prepared learning environment which is tailored to each individual child’s needs, in safe, secure, happy and relaxed surroundings. We follow a hollistic approach as the Association of Montessori International principles. We are new to our community and we are growing. There are no compromise with Alphabets when it comes to the learning environment for our children. We are proud to say that bring the best in class infrastructure and environment which our kids will love. We are committed to your children’s success. More the the environment of the school, we provide only Organic and Non GMO food for the children. We are a Nut Free environment as well. </div>
                   <div class="text-center text-sm-left">
                     <div class="row row-65 justify-content-sm-center justify-content-lg-start offset-top-65 counters">
                       <!-- <div class="col-sm-6 view-animate fadeInLeftSm delay-08"> -->
@@ -298,7 +301,7 @@
       <section id="programs" class="bg-madison bg-cover section-70 section-lg-114 text-center">
         <div class="container">
           <h2 class="font-weight-bold text-white view-animate fadeInUpSmall delay-04">Our Programs</h2>
-          <div class="offset-top-35 offset-lg-top-60 text-white view-animate fadeInUpSmall delay-06">In Alphabets Montessori, the programs are designed through AMI based authentic Montessori principles by understanding the development needs of each individual children.</div>
+          <div class="offset-top-35 offset-lg-top-60 text-white view-animate fadeInUpSmall delay-06">In Alphabets Montessori, the programs are designed through AMI based authentic Montessori principles by understanding the development needs of each individual.</div>
           <div class="row row-30 justify-content-sm-center offset-top-60 text-md-left">
             <div class="col-md-6 col-lg-4 view-animate fadeInRightSm delay-1">
               <article class="post-news bg-default"><a href="academic.html"><img class="img-responsive" src="https://res.cloudinary.com/abhinithame/image/upload/v1577902239/alphabets/infants.jpg" width="370" height="240" alt=""></a>
@@ -308,7 +311,7 @@
                   </div>
                   <h6><a href="academic.html">Infant Program</a></h6>
                   <div class="offset-top-9">
-                    <p class="text-base">For infants approx 10 Weeks to 16 Months</p>
+                    <p class="text-base">For infants approx 10 Weeks to 18 Months</p>
                   </div>
                   <!-- <div class="offset-top-9">
                     <ul class="list-inline list-unstyled list-inline-primary">
@@ -363,6 +366,9 @@
           <div class="offset-top-35 offset-xl-top-70 view-animate fadeInUpSmall"><a class="btn btn-ellipse btn-primary" href="academic.html">View All Programs</a></div>
         </div>
       </section>
+
+      
+
       <!-- Events-->
       <section id="events" class="bg-catskill bg-cover section-70 section-lg-114">
         <div class="container container-wide">
@@ -370,7 +376,7 @@
           <div class="row row-50 offset-top-60 justify-content-sm-center">
             <div class="col-md-6 col-lg-5 col-xxl-3">
               <article class="post-event view-animate fadeInLeftSm delay-04 bg-default">
-                <div class="post-event-img-overlay"><img class="img-responsive" src="https://res.cloudinary.com/abhinithame/image/upload/v1577902443/alphabets/valentine.jpg" width="420" height="420" alt="">
+                <div class="post-event-img-overlay"><img class="img-responsive" src="https://res.cloudinary.com/abhinithame/image/upload/v1583085875/alphabets/meetandgreet.jpg" width="420" height="420" alt="">
                   <div class="post-event-overlay context-dark"><a class="btn btn-ellipse btn-primary" href="mailto:info@alphabetmontessori.com?subject=Valentine's day Party!&body=Hello, %0d%0a I am looking for enrolling for Valentine's day party. Please provide me more information. %0d%0a Phone No: <YOUR PHONE NUMBER> %0d%0a Email ID: <YOUR EMAIL ADDRESS> %0d%0a%0d%0a Regards,%0d%0a <YOUR NAME>">Know More</a>
                     <!-- <div class="offset-top-20"><a class="btn btn-ellipse btn-default" href="event-page.html">Learn More</a></div> -->
                   </div>
@@ -378,13 +384,13 @@
                 <div class="unit unit-lg flex-column flex-xl-row">
                   <div class="unit-left">
                     <div class="post-event-meta text-center">
-                      <div class="h3 font-weight-bold d-inline-block d-xl-block">14</div>
-                      <p class="d-inline-block d-xl-block">February</p><span class="font-weight-bold d-inline-block d-xl-block inset-left-10 inset-xl-left-0">6:30pm - 10:30pm</span>
+                      <div class="h3 font-weight-bold d-inline-block d-xl-block">7</div>
+                      <p class="d-inline-block d-xl-block">March</p><span class="font-weight-bold d-inline-block d-xl-block inset-left-10 inset-xl-left-0">10.00 am</span>
                     </div>
                   </div>
                   <div class="unit-body">
                     <div class="post-event-body text-xl-left">
-                      <h6><a href="#">Valentine's Day & Parent's Party</a></h6>
+                      <h6><a href="#">Howard County Board of Education Candidate Meet and Greet</a></h6>
                       <!-- <ul class="list-inline list-inline-xs">
                         <li><a href="team-member-profile.html"><span class="icon icon-xxs mdi mdi-account-outline text-middle"></span><span class="inset-left-10 text-dark text-middle">Walter Stanley</span></a></li>
                       </ul> -->
@@ -434,7 +440,7 @@
                   </div>
                   <div class="unit-body">
                     <div class="post-event-body text-xl-left">
-                      <h6><a href="#">Parents Night Out</a></h6>
+                      <h6><a href="#">Parent's Night Out</a></h6>
                       <!-- <ul class="list-inline list-inline-xs">
                         <li><a href="team-member-profile.html"><span class="icon icon-xxs mdi mdi-account-outline text-middle"></span><span class="inset-left-10 text-dark text-middle">Bruce Hawkins</span></a></li>
                       </ul> -->
@@ -472,6 +478,67 @@
           <div class="offset-top-50 offset-xl-top-56 view-animate fadeInUpSmall"><a class="btn btn-ellipse btn-icon btn-icon-right btn-primary" target="_blank" href="https://res.cloudinary.com/abhinithame/image/upload/v1577897805/alphabets/events-calendar.pdf"><span class="icon fa-arrow-right"></span><span>Download Event Calendar</span></a></div>
         </div>
       </section>
+
+      <!-- Our Teachers-->
+      <section id="teachers" class="section-70 section-lg-114 bg-index-body">
+        <div class="container">
+          <h2 class="home-headings-custom font-weight-bold view-animate fadeInLeftSm delay-04">Our Teachers</h2>
+          <div class="row row-50 text-md-left offset-top-60">
+            <div class="col-md-6 col-xl-4">
+              <div class="unit unit-sm flex-column flex-md-row unit-spacing-lg">
+                <div class="unit-left"><img class="img-responsive d-inline-block img-rounded" src="images/golanski.png" width="110" height="110" alt=""></div>
+                <div class="unit-body">
+                  <h6 class="font-weight-bold text-primary"><a href="team-member-profile.html">Ms.Golanski</a></h6>
+                  <div class="offset-md-top-30">
+                    <ul class="list list-unstyled">
+                      <li><span class="icon icon-xs mdi mdi-phone text-middle text-gray" style="font-size: 24px; line-height: 24px"></span><a class="d-inline-block text-black inset-left-10" href="tel:+1-443-755-0100">Get in touch</a></li>
+                      <li><span class="icon icon-xs mdi mdi-email-outline text-middle text-gray" style="font-size: 24px; line-height: 24px"></span><a class="d-inline-block inset-left-10" href="mailto:info@alphabetsmontessori.com">Email me</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="offset-top-20">
+                <p>Vice President & Executive Head of School</p>
+              </div>
+            </div>
+            <div class="col-md-6 col-xl-4">
+              <div class="unit unit-sm flex-column flex-md-row unit-spacing-lg">
+                <div class="unit-left"><img class="img-responsive d-inline-block img-rounded" src="images/weegels.png" width="110" height="110" alt=""></div>
+                <div class="unit-body">
+                  <h6 class="font-weight-bold text-primary"><a href="team-member-profile.html">Ms.Weegels</a></h6>
+                  <div class="offset-md-top-30">
+                    <ul class="list list-unstyled">
+                      <li><span class="icon icon-xs mdi mdi-phone text-middle text-gray" style="font-size: 24px; line-height: 24px"></span><a class="d-inline-block text-black inset-left-10" href="tel:+1-443-755-0100">Get in touch</a></li>
+                      <li><span class="icon icon-xs mdi mdi-email-outline text-middle text-gray" style="font-size: 24px; line-height: 24px"></span><a class="d-inline-block inset-left-10" href="mailto:info@alphabetsmontessori.com">Email me</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="offset-top-20">
+                <p>Children's House Directress</p>
+              </div>
+            </div>
+            <div class="col-md-6 col-xl-4">
+              <div class="unit unit-sm flex-column flex-md-row unit-spacing-lg">
+                <div class="unit-left"><img class="img-responsive d-inline-block img-rounded" src="images/yoder.png" width="110" height="110" alt=""></div>
+                <div class="unit-body">
+                  <h6 class="font-weight-bold text-primary"><a href="team-member-profile.html">Ms.Yoder</a></h6>
+                  <div class="offset-md-top-30">
+                    <ul class="list list-unstyled">
+                      <li><span class="icon icon-xs mdi mdi-phone text-middle text-gray" style="font-size: 24px; line-height: 24px"></span><a class="d-inline-block text-black inset-left-10" href="tel:+1-443-755-0100">Get in touch</a></li>
+                      <li><span class="icon icon-xs mdi mdi-email-outline text-middle text-gray" style="font-size: 24px; line-height: 24px"></span><a class="d-inline-block inset-left-10" href="mailto:info@alphabetsmontessori.com">Email me</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="offset-top-20">
+                <p>Toddler Directress</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- Testimonials-->
       <section class="parallax-container context-dark" data-parallax-img="images/parallax-01.jpg">
         <div class="parallax-content section-130 section-xl-160">
@@ -703,7 +770,7 @@
                     <li>
                       <div class="unit flex-row align-items-center unit-spacing-xs">
                         <div class="unit-left"><span class="icon mdi mdi-phone text-middle icon-xs text-madison"></span></div>
-                        <div class="unit-body"><a class="text-dark" href="tel:#">+1-443-755-0100</a>
+                        <div class="unit-body"><a class="text-dark" href="tel:+1-443-755-0100">+1-443-755-0100</a>
                         </div>
                       </div>
                     </li>
@@ -716,7 +783,7 @@
                     <li class="offset-top-15">
                       <div class="unit flex-row align-items-center unit-spacing-xs">
                         <div class="unit-left"><span class="icon mdi mdi-email-open text-middle icon-xs text-madison"></span></div>
-                        <div class="unit-body"><a href="mailto:#">info@alphabetsmontessori.com</a></div>
+                        <div class="unit-body"><a href="mailto:info@alphabetsmontessori.com">info@alphabetsmontessori.com</a></div>
                       </div>
                     </li>
                   </ul>
@@ -734,7 +801,7 @@
                 <!-- <h6 class="font-weight-bold">Contact Us</h6> -->
                 <!-- <div class="text-subline"></div> -->
                 <div class="offset-top-30 text-left">
-                  <p>Reach out to us for enquiries, Open houses and Registrations also for any queries.</p>
+                  <p>Reach out to us for inquiries, Open houses and Registrations also for any queries.</p>
                 </div>
                 <div class="offset-top-10">
                   <form class="rd-mailform form-subscribe" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
