--- a/academic.html
+++ b/academic.html
@@ -168,19 +168,19 @@
                   <div class="tab-content">
                     <div class="tab-pane fade show active" id="tabs-1-1">
                       <h4 class="font-weight-bold home-headings-custom">Infants</h4>
-                      <h6 class="font-weight-bold home-headings-custom">Approx 10 Weeks to 16 Months</h6>
-                      <p>Our Montessori is quiet, cozy and comfortable for the children. Our classrooms are very secure and home like environment. Our parents are always welcome for an excursion to our school. We are very happy to walk you throught the secure and cozy environment where every child could enjoy and embrace themselves.</p>
+                      <h6 class="font-weight-bold home-headings-custom">Approx 10 Weeks to 18 Months</h6>
+                      <p>Our Montessori is quiet, cozy and comfortable for the children. Our classrooms are very secure and home like. Our parents are always welcome for an excursion to our school. We are very happy to walk you through the secure and cozy environment where every child could enjoy and embrace themselves.</p>
                       <section class="section-bottom-25 section-xl-bottom-25 offset-xl-top-20" >
                         <div class="container">
                           <div class="row justify-content-sm-center justify-content-xl-start text-md-left">
                             <div class="">
                               <!-- <h6 class="font-weight-bold">Child Care</h6> --> 
                               <div class="row row-30 offset-top-15 ">
-                                <div class="col-md-6"><img class="img-responsive d-inline-block" width="650" height="220" src="canva/infants1.jpg" alt=""></div>
+                                <div class="col-md-6"><img class="img-responsive d-inline-block" width="650" height="220" src="https://res.cloudinary.com/abhinithame/image/upload/v1583082236/alphabets/infants1.jpg" alt=""></div>
                                 <div class="col-md-6">
                                   <div class="inset-md-left-90">
-                                    <p>The first and foremost, The ratio of children to the teachers in this schools is going to be four to one. There will be an allocated Primary care giver to monitor and communicates the progress about accomplishments, tendencies and concerns to the parents in a very frequent manner.</p>
-                                    <p> We strongly believe that proper communications between out teachers and parents should happen frequently to provide the best possible care.</p>
+                                    <p>The first and foremost, the ratio of children to the teachers in this schools is going to be three to one. There will be an allocated primary care giver to monitor and communicates the progress about accomplishments, tendencies and concerns to the parents in a very frequent manner.</p>
+                                    <p> We strongly believe that proper communications between our teachers and parents should happen frequently to provide the best possible care.</p>
                                     <p> Providing successful development in these areas will improve the strength, coordination which are necessary to enjoy sports, dance and recreational activities.</p>
                                   </div>
                                 </div>
@@ -195,8 +195,8 @@
                             <div class="col-12">
                               <div class="bg-lightest section-30 inset-left-30 inset-right-30">
                                   <!-- <h6 class="font-weight-bold">1/1</h6> -->
-                                  <h6>One test of the correctness of educational procedure is the happiness of the child.</h6>
-                                  <p style="text-align: right;"> -- Maria Montessori</p>
+                                  <h6>"One test of the correctness of educational procedure is the happiness of the child."</h6>
+                                  <p style="text-align: right;"> -- Dr. Maria Montessori</p>
                               </div>
                             </div>
                            <div class="col-12">
@@ -215,7 +215,7 @@
                                 <div class="bg-lightest section-30 inset-left-30 inset-right-30">
                                   <div>
                                     <h6 class="font-weight-bold">Respect for the child</h6>
-                                    <p>We treat every child as an individual and to be well understood. Every child in deserves great respect and thats why it is one of our core values.</p>
+                                    <p>We treat every child as an individual and to be well understood. Every child in deserves great respect and that's why it is one of our core values.</p>
                                   </div>
                                 </div>
                               </div>
@@ -259,7 +259,7 @@
                     </div>
                     <div class="tab-pane fade show" id="tabs-1-2">
                       <h4 class="font-weight-bold home-headings-custom">Toddlers</h4>
-                      <h6 class="font-weight-bold home-headings-custom">Approx 16 Months to 3 Years</h6>
+                      <h6 class="font-weight-bold home-headings-custom">Approx 18 Months to 3 Years</h6>
                       <p>We strongly believe that our children are benefiting the most in the environment which provides them the appropriate opportunities to explore their full potential and capabilities. Our team of certified teachers focus is to build their independence and provoke their curiosity of the toddlers which will enrich their love for learning throughout their life.</p>
                       <section class="section-bottom-25 section-xl-bottom-25 offset-xl-top-20" >
                         <div class="container">
@@ -267,11 +267,11 @@
                             <div class="">
                               <!-- <h6 class="font-weight-bold">Child Care</h6> --> 
                               <div class="row row-30 offset-top-15 ">
-                                <div class="col-md-6"><img class="img-responsive d-inline-block" width="650" height="220" src="canva/toddlers1.jpg" alt=""></div>
+                                <div class="col-md-6"><img class="img-responsive d-inline-block" width="650" height="220" src="https://res.cloudinary.com/abhinithame/image/upload/v1583083667/alphabets/toddlers1.jpg" alt=""></div>
                                 <div class="col-md-6">
                                   <div class="inset-md-left-90">
                                     <p>Our classrooms are specifically designed to provide a beautiful and nurturing environment. The materials and furniture are carefully chosen to meet your child's developmental needs.</p>
-                                    <p> We always firmly believes the philosophy of montessori where we provide the freedom and independence to choose the materials they are willing to work and enabling them to explore their own interests. This is an important step in the life of our children to develop self confidence and discovering their own preferences and passion.</p>
+                                    <p> We always firmly believe the philosophy of Montessori where we provide the freedom and independence to choose the materials they are willing to work and enabling them to explore their own interests. This is an important step in the life of our children to develop self confidence and discovering their own preferences and passion.</p>
                                     <p>
                                       With this approach the toddlers will experience less frustration and an astonishing growth in a short span of time and also dramatic advancement in language, fine motor skills and problem solving. 
                                     </p>
@@ -288,8 +288,8 @@
                             <div class="col-12">
                               <div class="bg-lightest section-30 inset-left-30 inset-right-30">
                                   <!-- <h6 class="font-weight-bold">1/1</h6> -->
-                                  <h6>The greatest development is achieved during the first years of life, and therefore it is then that the greatest care should be taken. If this is done, then the child does not become a burden; he will reveal himself as the greatest marvel of nature.</h6>
-                                  <p style="text-align: right;"> -- Maria Montessori</p>
+                                  <h6>"The greatest development is achieved during the first years of life, and therefore it is then that the greatest care should be taken. If this is done, then the child does not become a burden; he will reveal himself as the greatest marvel of nature."</h6>
+                                  <p style="text-align: right;"> -- Dr. Maria Montessori</p>
                               </div>
                             </div>
                            <div class="col-12">
@@ -308,7 +308,7 @@
                                 <div class="bg-lightest section-30 inset-left-30 inset-right-30">
                                   <div>
                                     <h6 class="font-weight-bold">Respect for the child</h6>
-                                    <p>We treat every child as an individual and to be well understood. Every child in deserves great respect and thats why it is one of our core values.</p>
+                                    <p>We treat every child as an individual and to be well understood. Every child in deserves great respect and that's why it is one of our core values.</p>
                                   </div>
                                 </div>
                               </div>
@@ -316,7 +316,7 @@
                                 <div class="bg-lightest section-30 inset-left-30 inset-right-30">
                                   <div>
                                     <h6 class="font-weight-bold">Language and Speech</h6>
-                                    <p>Our authentic montessori way uses the exclusive and proven phonetics and sound practice can enable them to introduce themselves the fundamentals of languages.</p>
+                                    <p>Our authentic Montessori way uses the exclusive and proven phonetics and sound practice can enable them to introduce themselves the fundamentals of languages.</p>
                                   </div>
                                 </div>
                               </div>
@@ -324,7 +324,7 @@
                                 <div class="bg-lightest section-30 inset-left-30 inset-right-30">
                                   <div>
                                     <h6 class="font-weight-bold">Children based learning plans</h6>
-                                    <p> We like the children to learn at their own speed and explore new things in various developmental areas. This will make our children to love the way they learn.</p>
+                                    <p> We like the children to learn at their own speed and explore new things in various developmental areas. This will make our children love the way they learn.</p>
                                   </div>
                                 </div>
                               </div>
@@ -340,7 +340,7 @@
                                 <div class="bg-lightest section-30 inset-left-30 inset-right-30">
                                   <div>
                                     <h6 class="font-weight-bold">Senses </h6>
-                                    <p> Our authentic montessori way makes the toddlers learn through the five senses which can let them comprehend and classify the world and the meaning around them.</p>
+                                    <p> Our authentic Montessori way makes the Toddlers learn through the five senses which can let them comprehend and classify the world and the meaning around them.</p>
                                   </div>
                                 </div>
                               </div>
@@ -352,14 +352,14 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="col-6">
+                              <!-- <div class="col-6">
                                 <div class="bg-lightest section-30 inset-left-30 inset-right-30">
                                   <div>
                                     <h6 class="font-weight-bold">Communication to Parents</h6>
                                     <p>We firmly believe that consistent communication between the teachers and the parents contribute a great part in the intellectual development of children.</p>
                                   </div>
                                 </div>
-                              </div>
+                              </div> -->
                           
 
                           </div>
@@ -369,18 +369,18 @@
                     <div class="tab-pane fade show" id="tabs-1-3">
                       <h4 class="font-weight-bold home-headings-custom">Children House</h4>
                       <h6 class="font-weight-bold home-headings-custom">Approx 3 Years to 6 Years</h6>
-                      <p>This is the correct stage where their curiosity transforms into inspiration, discovery and development. This program of our school features advanced curriculum, enrichment and self development. There will be so many choices for them to engage themselves.</p>
+                      <p>This is the stage where their curiosity transforms into inspiration, discovery. </p>
                       <section class="section-bottom-25 section-xl-bottom-25 offset-xl-top-20" >
                         <div class="container">
                           <div class="row justify-content-sm-center justify-content-xl-start text-md-left">
                             <div class="">
                               <!-- <h6 class="font-weight-bold">Child Care</h6> --> 
                               <div class="row row-30 offset-top-15 ">
-                                <div class="col-md-6"><img class="img-responsive d-inline-block" width="650" height="220" src="canva/children1.jpg" alt=""></div>
+                                <div class="col-md-6"><img class="img-responsive d-inline-block" width="650" height="220" src="https://res.cloudinary.com/abhinithame/image/upload/v1583085841/alphabets/children1.jpg" alt=""></div>
                                 <div class="col-md-6">
                                   <div class="inset-md-left-90">
-                                    <p>Our multiage classrooms are designed specifically to meet the developmental needs of our children. It explores the full depth of the authentic montessori education. Our classroom environment is carefully prepared where our young children can direct themselves and build confidence and social skills.</p>
-                                    <p> Our Program for the kindergaten and Preschool teaches the real life skills like leadership and Mentorship, helping young children and practical life activities. We provide real world purposeful tasks and tools to help him / herself.</p>
+                                    <p>Our multiage classrooms are designed specifically to meet the developmental needs of our children. It explores the full depth of the authentic Montessori education. Our classroom environment is carefully prepared where our young children can direct themselves and build confidence and social skills.</p>
+                                    <p> Our Preschool program teaches the real life skills like leadership and Mentorship, helping young children and practical life activities.</p>
                                   </div>
                                 </div>
                               </div>
@@ -394,8 +394,8 @@
                             <div class="col-12">
                               <div class="bg-lightest section-30 inset-left-30 inset-right-30">
                                   <!-- <h6 class="font-weight-bold">1/1</h6> -->
-                                  <h6>A child who has become master of his acts through long and repeated exercises, and who has been encouraged by the pleasant and interesting activities in which he has been engaged, is a child filled with health and joy and remarkable for his calmness and discipline.</h6>
-                                  <p style="text-align: right;"> -- Maria Montessori</p>
+                                  <h6>"A child who has become master of his acts through long and repeated exercises, and who has been encouraged by the pleasant and interesting activities in which he has been engaged, is a child filled with health and joy and remarkable for his calmness and discipline."</h6>
+                                  <p style="text-align: right;"> -- Dr. Maria Montessori</p>
                               </div>
                             </div>
                            <div class="col-12">
@@ -454,7 +454,7 @@
                                 <div class="bg-lightest section-30 inset-left-30 inset-right-30">
                                   <div>
                                     <h6 class="font-weight-bold">Senses</h6>
-                                    <p> In our authentic montessori way, we  make our children to become more logical and perceptive. We let them explore and experience textures, colors, sizes and shapes.</p>
+                                    <p> In our authentic Montessori way, we  make our children to become more logical and perceptive. We let them explore and experience textures, colors, sizes and shapes.</p>
                                   </div>
                                 </div>
                               </div>
@@ -462,7 +462,7 @@
                                 <div class="bg-lightest section-30 inset-left-30 inset-right-30">
                                   <div>
                                     <h6 class="font-weight-bold">Physical Education</h6>
-                                    <p>We have several periods of outdoor play with out well equipped playgrounds and courts. This will develop the fine motor skills, fitness and movemnet activities. </p>
+                                    <p>We have several periods of outdoor play with well equipped playgrounds and courts. This will develop the fine motor skills, fitness and activities. </p>
                                   </div>
                                 </div>
                               </div>
@@ -529,7 +529,7 @@
               <!-- <h6 class="font-weight-bold">Contact Us</h6> -->
               <!-- <div class="text-subline"></div> -->
               <div class="offset-top-30 text-left">
-                <p>Reach out to us for enquiries, Open houses and Registrations also for any queries.</p>
+                <p>Reach out to us for inquiries, Open houses and Registrations also for any queries.</p>
               </div>
               <div class="offset-top-10">
                 <form class="rd-mailform form-subscribe" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
