--- a/why-montessori.html
+++ b/why-montessori.html
@@ -534,7 +534,7 @@
                 <!-- <h6 class="font-weight-bold">Contact Us</h6> -->
                 <!-- <div class="text-subline"></div> -->
                 <div class="offset-top-30 text-left">
-                  <p>Reach out to us for enquiries, Open houses and Registrations also for any queries.</p>
+                  <p>Reach out to us for inquiries, Open houses and Registrations also for any queries.</p>
                 </div>
                 <div class="offset-top-10">
                   <form class="rd-mailform form-subscribe" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
